--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -30,7 +32,18 @@ yarn-error.log*
 
 # vercel
 .vercel
+.env
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
+# IDE files
+.idea
+.vscode
