--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "emailjs-com": "^3.2.0",
+    "fs": "^0.0.1-security",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
